fixed responsive issues on iphone5

--- a/3.React-Projects/mini-projects/calculator/src/App.css
+++ b/3.React-Projects/mini-projects/calculator/src/App.css
@@ -3,13 +3,13 @@ body {
 }
 
 .calculator {
-  width: 400px;
+  max-width: 400px;
   padding-bottom: 50px;
 }
 
 .calculator__outershell {
   background-color: #535b5e;
-  border-radius: 5%;
+
   border: 2px solid #a2a1a6;
   box-shadow: 11px 10px 34px 1px rgba(0, 0, 0, 0.68),
     inset -1px -6px 12px 0.1px #616571;
@@ -19,23 +19,38 @@ body {
   margin: 0.025rem 0.25rem;
   background: linear-gradient(to right, #59585e, #333238, #1c1b23);
   border: 2px solid #17181b;
-  border-radius: 2%;
+
   box-shadow: 11px 10px 34px 1px rgba(0, 0, 0, 0.68),
     inset -1px -6px 12px 0.1px #211d22;
+}
+
+@media screen and (min-width: 768px) {
+  .calculator__outershell {
+    border-radius: 5%;
+  }
+  .calculator__inner {
+    border-radius: 2%;
+  }
 }
 
 .calculator__inner--title {
   color: white;
   padding-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.calculator__inner div {
+  padding: 0.25rem 0;
 }
 
 .calculator__inner--logo {
   width: 100px;
+  height: 68px;
 }
 
 .calculator__inner--screen {
   background-color: #6f9180;
-  margin: 0 1.5rem;
+  margin: 0 0.75rem;
   border: 3px solid #283c33;
   font-family: "Orbitron", sans-serif;
   height: 70px;
